<resources>
    <string name="app_name">findAdate</string>
    <string name="existing_users"><u>Existing users</u></string>
    <string name="register_with_facebook">Register with Facebook</string>
    <string name="sign_up_with_email">Sign up with Email</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="email">Email</string>
    <string name="user_name">UserName</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="i_am_a">I am a:</string>
    <string name="man_interested_in_women">Man interested in women</string>
    <string name="woman_interested_in_men">Woman interested in men</string>
    <string name="man_interested_in_men">Man interested in men</string>
    <string name="woman_interested_in_women">Woman interested in women</string>
    <string name="back">Back</string>
    <string name="properemail">You must enter a proper email address</string>
    <string name="nameerror">Please enter your name</string>
    <string name="passworderror">Enter a password at least 8 characters long</string>
    <string name="enter_email">Enter Email</string>
    <string name="sign_in">Connect</string>
    <string name="ok">OK</string>
    <string name="enter_password">Enter password</string>

    //Cities
    <string name="city1">Ofakim</string>
    <string name="city2">Or Yehuda</string>
    <string name="city3">Eilat</string>
    <string name="city4">Elad</string>
    <string name="city5">Ariel</string>
    <string name="city6">Ashdod</string>
    <string name="city7">Ashkelon</string>
    <string name="city8">Beer Sheva</string>
    <string name="city9">Beit Shean</string>
    <string name="city10">Beit Shemesh</string>
    <string name="city11">Betar Illit</string>
    <string name="city12">Bnei Berak</string>
    <string name="city13">Bat Yam</string>
    <string name="city14">Givatayim</string>
    <string name="city15">Dimona</string>
    <string name="city16">Hod HaSharon</string>
    <string name="city17">Herzliya</string>
    <string name="city18">Hadera</string>
    <string name="city19">Holon</string>
    <string name="city20">Haifa</string>
    <string name="city21">Tiberias</string>
    <string name="city22">Tira</string>
    <string name="city23">Tirat Carmel</string>
    <string name="city24">Yavne</string>
    <string name="city25">Yehud-Monosson</string>
    <string name="city26">Yokneam</string>
    <string name="city27">Jerusalem</string>
    <string name="city28">Kfar Sava</string>
    <string name="city29">Karmiel</string>
    <string name="city30">Lod</string>
    <string name="city31">Migdal HaEmek</string>
    <string name="city32">Modiin</string>
    <string name="city33">Maale Adumim</string>
    <string name="city34">Maalot Tarshiha</string>
    <string name="city35">Nahariya</string>
    <string name="city36">Nof Hagalil</string>
    <string name="city37">Nes Ziona</string>
    <string name="city38">Nazareth</string>
    <string name="city39">Nesher</string>
    <string name="city40">Netivot</string>
    <string name="city41">Netanya</string>
    <string name="city42">Akko</string>
    <string name="city43">Afula</string>
    <string name="city44">Arad</string>
    <string name="city45">Petah Tikva</string>
    <string name="city46">Tsfat</string>
    <string name="city47">Kiryat Ono</string>
    <string name="city48">Kiryat Ata</string>
    <string name="city49">Kiryat Bialik</string>
    <string name="city50">Kiryat Gat</string>
    <string name="city51">Kiryat Yam</string>
    <string name="city52">Kiryat Motzkin</string>
    <string name="city53">Kiryat Malachi</string>
    <string name="city54">Kiryat Shemone</string>
    <string name="city55">Rosh Ha\'ayin</string>
    <string name="city56">Rishon Lezion</string>
    <string name="city57">Rahat</string>
    <string name="city58">Rehovot</string>
    <string name="city59">Ramla</string>
    <string name="city60">Ramat-Gan</string>
    <string name="city61">Ramat Hasharon</string>
    <string name="city62">Raanana</string>
    <string name="city63">Sderot</string>
    <string name="city64">Tel Aviv</string>
    <string name="user_details">User\'s Last Details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="city">City</string>
    <string name="birthdate">Birthdate</string>
    <string name="yourselferror">you must tell about yourself</string>
    <string name="birthdateerror">you must enter your birthdate</string>
    <string name="firstnameerror">you must enter your first name</string>
    <string name="lastnameerror">You must enter your last name</string>
    <string name="cityerror">You must enter your city</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="keep_me_connected">Keep me connected</string>
    <string name="choose_source">Choose source</string>
    <string name="choose_source_message">take image from gallery or camera</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="find_your_one">Find your one</string>
    <string name="update_your_file">Update your profile</string>
    <string name="about_yourself">Few Words About Yourself…</string>
    <string name="user_age">Age:</string>
    <string name="email1">Email:</string>
    <string name="usercity">City:</string>
    <string name="firstname">First name:</string>
    <string name="lastname">Last name:</string>
    <string name="aboutuser">About myself:</string>
    <string name="type_a_message">Type a message…</string>
    <string name="settings">Settings</string>
    <string name="wifi_problem">wifi problem</string>
    <string name="wifi_is_not_connected_please_connect">Wifi is not connected, please connect!</string>
    <string name="connect">Connect</string>
    <string name="message_from">Message from</string>
    <string name="alert">Alerts</string>
    <string name="logout">Log out</string>
    <string name="logoutfrom">Log out from app</string>
    <string name="cancel_reminder">Cancel reminder</string>
    <string name="about">About</string>
    <string name="aboutapp">About the app</string>
    <string name="findadate_is_israel_s_app_for_dating_where_singles_of_all_ages_and_at_every_stage_of_life_can_meet_and_find_their_true_match_the_use_of_the_findadate_app_incorporates_an_interactive_and_convenient_user_interface_that_allows_easy_and_fun_access_to_its_users_tens_of_thousands_of_singles_are_part_of_our_app_s_community_hundreds_of_couples_have_already_met_and_fallen_in_love_and_many_have_even_gotten_married_all_through_the_help_of_our_app">FindAdate is an Israel’s app for dating where singles of all ages and at every stage of life can meet and find their true match.\n\nThe use of the findAdate app incorporates an interactive and convenient user interface that allows easy and fun access to its users.\n\nTens of thousands of singles are part of our app’s community, hundreds of couples have already met and fallen in love, and many have even gotten married – all through the help of our app.</string>
    <string name="finish">Finish</string>
    <string name="come_and_see">Come and see  Maybe todey you will find you one</string>
    <string name="reminder">Reminder</string>
    <string name="make_alert_one_day">make alert one in a day</string>
    <string name="email_already_exist">This email is already exist!</string>
    <string name="cant_send_empty_msg">You cant send empty message</string>
    <string name="press_on_exist_users_ngood_luck">Sign up has been successful!\nTo sign in with your user, you have to press on \'exist users\'. Good luck!</string>
    <string name="account_approval">Account Approval</string>
    <string name="contin">Continue</string>



</resources>
