<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/layout_account_user"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/create_a_new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/colorRed2"
            android:textColor="@color/colorBlue"
            android:textSize="30sp"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/email_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:gravity="center"
            android:textColorHint="@color/colorBlue5"
            android:textColor="@color/colorBlue4"
            android:background="@drawable/shapeedittext"
            />
        <EditText
            android:id="@+id/user_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColorHint="@color/colorBlue5"
            android:textColor="@color/colorBlue4"
            android:background="@drawable/shapeedittext"
            android:hint="@string/user_name"
            android:gravity="center"
            />
        <EditText
            android:id="@+id/password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColorHint="@color/colorBlue5"
            android:textColor="@color/colorBlue4"
            android:background="@drawable/shapeedittext"
            android:hint="@string/password"
            android:gravity="center"
            android:inputType="textPassword"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">
        <Button
            android:id="@+id/next_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_light"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@android:color/white"
            android:text="@string/next"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/back_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_light"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@android:color/white"
            android:text="@string/back"
            android:textAllCaps="false"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
