<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/love_background1">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wifi_problem"
        android:textColor="@color/colorBlue"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/image_asset"/>
        <TextView
            android:gravity="center|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/wifi_is_not_connected_please_connect"
            android:textColor="@color/colorBlue2"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_network"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:text="@string/connect"
        android:background="@drawable/btn_shape_blue"
        android:textAllCaps="false"/>
</LinearLayout>