<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/love_background1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="35sp"
            android:textColor="@color/colorBlue"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_registration"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_email"
                android:textStyle="bold"
                android:textColor="@color/colorBlue2"
                android:textAllCaps="false"/>
            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:inputType="textEmailAddress"
                android:background="@drawable/shapeedittext"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_password"
                android:textStyle="bold"
                android:textColor="@color/colorBlue2"
                android:textAllCaps="false"/>
            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:inputType="textPassword"
                android:background="@drawable/shapeedittext"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <CheckBox
            android:id="@+id/checkbox_always_connected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/keep_me_connected"/>
        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:background="@drawable/shape_registration"
            android:layout_gravity="end"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"/>
    </LinearLayout>
</LinearLayout>